Fix for map region unwanted vertical scrollbar

--- a/arches/app/media/css/arches.scss
+++ b/arches/app/media/css/arches.scss
@@ -7601,7 +7601,7 @@ ul div .card-tree-list span .card-tree-list-item .card-tree-list-icon {
     -webkit-flex: 1;
     flex: 1;
     background: #ebeef0;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
